--- a/Landingpage/landingpage.css
+++ b/Landingpage/landingpage.css
@@ -1,11 +1,11 @@
-/* Importação de fontes */
+/* ImportaÃ§Ã£o de fontes */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Righteous&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Poppins:wght@400;500;700&family=Righteous&display=swap');
 
-/* Variáveis para as fontes */
+/* VariÃ¡veis para as fontes */
 :root {    
     --poppins: 'Poppins', sans-serif;
     --righteous: 'Righteous', sans-serif;
@@ -15,9 +15,7 @@
 /* Estilo geral */
 * {
     margin: 0;
-    /*margem é a distância da tag usada pra exterior*/
     padding: 0;
-    /*padding é a distância da tag usada pro seu conteúdo*/
     box-sizing: border-box;
     text-decoration: none;
 }
@@ -28,7 +26,7 @@ body {
     background: linear-gradient(68.15deg, #183D3D 16.62%, #005B41 85.61%);
 }
 
-/* Cabeçalho */
+/* CabeÃ§alho */
 .cabecalho {
     display: flex;
     flex-direction: row;
@@ -55,13 +53,24 @@ body {
     font-size: 18px;
 }
 
-/* Conteúdo */
+.cabecalho-menu-item:hover {
+    padding: 5px;
+    color: rgb(19, 105, 80);
+    background: rgb(137, 127, 127);
+    border: none;
+    border-radius: 5px;
+    font-weight: 400;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+/* ConteÃºdo */
 .conteudo {
     border-top: 0.4px solid rgb(137, 127, 127);
     margin-bottom: 48px;
 }
 
-/* Conteúdo principal */
+/* ConteÃºdo principal */
 .conteudo-principal {
     display: flex;
     flex-direction: row;
@@ -107,7 +116,7 @@ body {
     height: 430px;
 }
 
-/* Conteúdo secundário */
+/* ConteÃºdo secundÃ¡rio */
 .conteudo-secundario {
     display: flex;
     flex-direction: column;
@@ -133,15 +142,68 @@ body {
 
 }
 
-/* Rodapé */
-.rodape {
+/* ConteÃºdo terciÃ¡rio */
+.conteudo-terciario {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+    margin-top: 48px;
+}
+
+.conteudo-terciario-titulo {
+    border-top: 0.4px solid rgb(137, 127, 127);
+    font-family: var(--righteous);
+    color: rgb(137, 127, 127);
+    font-size: 30px;
+    padding-top: 48px;
+    margin-bottom: 16px;
+}
+
+/* .conteudo-terciario-botao {
+    background: rgb(19, 105, 80);
+    border: none;
+    padding: 5px;
+    border-radius: 5px;
+    width: 140px;
+    height: 40px;
+    box-shadow: 4px 5px 4px rgba(0, 0, 0, 0.25);
+} */
+
+.conteudo-terciario-botao {
+    display: flex;
+    background: rgb(19, 105, 80);
+    border: none;
+    padding: 5px;
+    border-radius: 5px;
+    width: 140px;
+    height: 40px;
+    box-shadow: 4px 5px 4px rgba(0, 0, 0, 0.25);
+    font-family: var(--poppins);
+    text-decoration: none;
+    color: rgb(204, 190, 190);
+    justify-content: center;
+}
+
+.conteudo-terciario-botao:hover {
+    background-color: #102e2e;
+}
+
+/* RodapÃ© */
+footer {
     border-top: 0.6px solid rgb(137, 127, 127);
     height: 48px;
-    display: block;
-    margin: 0 auto;
+    position: absolute;
+    right: 0;
+    width: 100%;
+    padding: 4px;
+    display: flex;
+    justify-content:right;
+    align-items: center;
+}
+
+.rodape {
     font-size: 20px;
     font-family: var(--confortaa);
     color: rgb(137, 127, 127);
-    padding: 10px;
-    padding-left: 837px;
 }
